--- a/divtest.html
+++ b/divtest.html
@@ -11,7 +11,7 @@
         
         <div style="background-color: indianred; height:400px; width:300px; padding: 50px; border:50px; float:left;">
             <h2><BOLD> BISON </BOLD> </h2>
-                    <img src="C:\Users\fernandezr\desktop\Pictures\bison.jpg" alt="HTML5 Icon" style="width:256px;height:300px;">
+                    <img src="C:\Users\fernandezr\desktop\Pictures\bison.jpg" alt="BISON PIC GOES HERE" style="width:256px;height:300px;">
 
             <p>Listen to a sample of <a href="/music/good_enough.mp3">Good Enough</a> by John Hall.</p>
         </div>
