--- a/divtest.html
+++ b/divtest.html
@@ -30,8 +30,8 @@
         </div>
        
         <div style="background-color: indianred; height:400px; width:300px; padding: 50px; border:50px; float:left;">
-            <h2><BOLD> Dhanalakhsmi </BOLD> </h2>
-                    <img src="C:\Users\renny\Pictures\dhan.jpg" alt="HTML5 Icon" style="width:256px;height:300px;">
+            <h2><BOLD> BISON </BOLD> </h2>
+                    <img src="C:\Users\fernandezr\Pictures\bison.jpg" alt="BISON pic goes here" style="width:256px;height:300px;">
 
             <p>Listen to a sample of <a href="/music/good_enough.mp3">Good Enough</a> by John Hall.</p>
         </div>
